--- a/StuffManagement/AcSalary.html
+++ b/StuffManagement/AcSalary.html
@@ -18,10 +18,11 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="IDCreation.html">Create ID</a></li>
-      <li><a href="#">Update Profile</a></li>
+      <li><a href="#">Salary</a></li>
+      <li><a href="#">Attendence</a></li>
+      <li><a href="#">Leav</a></li>
+      <li><a href="#">join</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="Log.html"  target="_blank">Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
@@ -34,36 +35,33 @@
 
 
 
-<div class="container">
-  <h2>Profile</h2>
-  <div class="row">
-    <div class="col-md-4" >
-      <div class="thumbnail">
-        <a href="f1.PNG" target="_blank">
-          <img src="f1.PNG"  alt="Lights" style="width:100%" class="img-circle" alt="Cinque Terre" width="236" height="304">
-          <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        
-          <div class="caption">
-            <p>About</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-            <p>Update profile</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
+
+
+
+<div class="container" align="center" class="form-group">
+  <h2>Ac Salary</h2>
+ 
+  <form class="form-inline" action="/action_page.php">
+  <table cellspacing="2" cellpadding="2" border="0">
+  <tr>
+
+      <td><label for="email">Email:</label></td>
+      <td><input type="email" class="form-control" id="email" placeholder="Enter email" name="email"></td>
+      </tr>
+
+      <td><label for="email">ID</label></td>
+      <td><input type="email" class="form-control" id="email" placeholder="Enter ID" name="email"></td>
+      </tr>
+
+
+
+  <tr>
+    <td>&nbsp;</td>
+
+    <td><button type="submit" class="btn btn-default">Submit</button></td>
+      </tr>
+  </table>
+  </form>
 </div>
 
 
