--- a/StuffManagement/AcPanel.html
+++ b/StuffManagement/AcPanel.html
@@ -18,10 +18,11 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="IDCreation.html">Create ID</a></li>
-      <li><a href="#">Update Profile</a></li>
+      <li><a href="#">Salary</a></li>
+      <li><a href="#">Attendence</a></li>
+      <li><a href="#">Leav</a></li>
+      <li><a href="#">join</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="Log.html"  target="_blank">Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
