--- a/StuffManagement/IDCreation.html
+++ b/StuffManagement/IDCreation.html
@@ -33,10 +33,10 @@
 <!--Nav bar end-->
 
 
+<!-- my owne code
 
-
-<div class="container" align="center">
-  <h2>Inline form</h2>
+<div class="container" align="center" class="form-group">
+  <h2>Creat ID</h2>
  
   <form class="form-inline" action="/action_page.php">
   <table cellspacing="2" cellpadding="2" border="0">
@@ -71,6 +71,55 @@
   </form>
 </div>
 
+-->
+
+<div class="container">
+  <h2>Creat New ID</h2>
+  <form class="form-horizontal" action="/action_page.php">
+
+
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Email:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">ID:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email" placeholder="Enter ID" name="email">
+      </div>
+    </div>
+
+
+
+
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Password:</label>
+      <div class="col-sm-10">          
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Conform Password:</label>
+      <div class="col-sm-10">          
+        <input type="password" class="form-control" id="pwd" placeholder="Conform password" name="pwd">
+      </div>
+    </div>
+
+
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
+</div>
 
 
 
