--- a/StuffManagement/Log.html
+++ b/StuffManagement/Log.html
@@ -17,11 +17,11 @@
     <!--  <a class="navbar-brand" href="#">WebSiteName</a>-->
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="IDCreation.html">Create ID</a></li>
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Create ID</a></li>
       <li><a href="#">Update Profile</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="Log.html"  target="_blank">Log</a></li>
+      <li><a href="#">Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
@@ -34,39 +34,26 @@
 
 
 
-<div class="container">
-  <h2>Profile</h2>
-  <div class="row">
-    <div class="col-md-4" >
-      <div class="thumbnail">
-        <a href="f1.PNG" target="_blank">
-          <img src="f1.PNG"  alt="Lights" style="width:100%" class="img-circle" alt="Cinque Terre" width="236" height="304">
-          <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        
-          <div class="caption">
-            <p>About</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-            <p>Update profile</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
 
+<div class="container" align="center">
+    <div class="row" >
+        <div class="col-md-12" >
+            <h2>Log</h2>
+            <div id="custom-search-input">
+                <div class="input-group col-md-12">
+                    <input type="text" class="form-control input-lg" placeholder="Enter ID" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-info btn-lg" type="button">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 </body>
 </html>
+
