--- a/StuffManagement/index.html
+++ b/StuffManagement/index.html
@@ -75,7 +75,7 @@
 
 
 <div class="container">
-  <h2>Carousel Example</h2>
+  <h2>Slider</h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
