--- a/StuffManagement/AdcPanel.html
+++ b/StuffManagement/AdcPanel.html
@@ -17,11 +17,11 @@
     <!--  <a class="navbar-brand" href="#">WebSiteName</a>-->
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="IDCreation.html">Create ID</a></li>
-      <li><a href="#">Update Profile</a></li>
+      <li class="active"><a href=index.html>Home</a></li>
+      <li><a href=IDCreation.html>Create ID</a></li>
+      <li><a href=UpdateAdBio.html>Update Profile</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="Log.html"  target="_blank">Log</a></li>
+      <li><a href=Log.html>Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
