--- a/StuffManagement/IDCreation.html
+++ b/StuffManagement/IDCreation.html
@@ -18,10 +18,10 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Create ID</a></li>
-      <li><a href="#">Update Profile</a></li>
+      <li><a href=index.html>Create ID</a></li>
+      <li><a href=UpdateAdBio.html>Update Profile</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="#">Log</a></li>
+      <li><a href=Log.html>Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
