--- a/StuffManagement/Log.html
+++ b/StuffManagement/Log.html
@@ -17,15 +17,15 @@
     <!--  <a class="navbar-brand" href="#">WebSiteName</a>-->
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Create ID</a></li>
-      <li><a href="#">Update Profile</a></li>
+      <li class="active"><a href=index.html>Home</a></li>
+      <li><a href=IDCreation.html>Create ID</a></li>
+      <li><a href=UpdateAdBio.html>Update Profile</a></li>
       <li><a href="#">Notification</a></li>
-      <li><a href="#">Log</a></li>
+      <li><a href=Log.html>Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-      <li><a href="Login.html" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+      <li><a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
